comments overflow fix

--- a/stylesheets/form.css
+++ b/stylesheets/form.css
@@ -41,7 +41,6 @@
   padding: clamp(0.25rem, 2vw, 2rem);
   background: rgb(255, 255, 255, 1);
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  border: 3px solid #7fff00;
 }
 @media only screen and (max-height: 700px) {
   .form_flexbox__item {
